Almost done with LPTHW
Almost done with Learn Python3 The Hard Way. Good book, highly recommend, I learnt a lot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "git.ignoreMissingGitWarning": true,
     "editor.fontWeight": "bold",
     "terminal.integrated.fontWeight": "bold",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "extensions.ignoreRecommendations": true
 }
